# anarres

./: .ansible-lint.yaml  .gitignore  .markdownlint.yaml  Gemfile  HOSTS  Makefile  README.md  Rakefile  anarres.sh  anarres.yaml  anarres.yml  pyproject.toml  vars.yaml  vault.yaml
.github/workflows/: pr-ansible-lint.yaml  pr-docstests.yaml  pr-shellcheck.yaml
examples/: become.pass  vars.yaml  vault.pass
packer/arch/: virtualbox.sh
packer/common/: cleanup.sh  root.sh  sudoers.sh  vagrant.sh
packer/templates/: arch.json
roles/common/files/dotconfig/: user-dirs.dirs
roles/common/files/dotzsh/: aliases.sh  functions.sh  nocaps.sh
roles/common/handlers/: main.yml
roles/common/tasks/: dev.yml  docs.yml  emacs.yml  gui.yml  main.yml  pre.yml  shell.yml  web.yml
roles/common/templates/: dotXresources.j2  dotgitconfig.j2  dotzshrc.j2
roles/common/templates/dotgnupg/: gpg-agent.conf
roles/common/templates/dotrbenv/: default-gems.j2
roles/common/templates/dotssh/: config.j2
roles/common/vars/: main.yml
roles/dev/handlers/: main.yaml
roles/dev/tasks/: docker.yaml  main.yaml  python.yaml
roles/dev/vars/: main.yaml
roles/pre/tasks/: main.yaml
roles/pre/vars/: main.yaml
roles/shell/handlers/: main.yaml
roles/shell/tasks/: main.yaml  ohmyzsh.yaml  spacevim.yaml
roles/shell/templates/: aliases.zsh.j2  custom.zsh.j2  functions.zsh.j2
roles/shell/vars/: main.yaml
roles/web/tasks/: main.yaml
tasks/: clean.mk  packer.mk  style.mk  style.rake
tasks/scripts/: packer-build.sh  packer-download.sh  run.sh
tests/: pr-tests.sh
(+4 files in other folders)
