[project]
name = "anarres"
version = "0.2.0"
description = "Superliminal configuration of my workstations with ansible."
authors = [
    {name = "C",email = "mxcoffeemancy@gmail.com"}
]
license = {text = "UNLICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests.dependencies]
ansible-lint = "^25.1.3"


[tool.poetry.group.test.dependencies]
ansible = "^11.3.0"

